# gold-linker

./: CMakeLists.txt  README.md
cmake/: warnings-clang-14.cmake  warnings-clang-default.cmake  warnings-gcc-12.cmake  warnings-gcc-default.cmake  warnings.cmake
libs/: CMakeLists.txt
libs/config/include/gold/config/: config.h  system.h
libs/config/src/: CMakeLists.txt  ansidecl.cpp  config.cpp  system.cpp
libs/elfcpp/include/gold/elfcpp/: elfcpp.h  elfcpp_file.h  elfcpp_swap.h
libs/elfcpp/src/: CMakeLists.txt  aarch64.cpp  arm.cpp  dwarf.cpp  elfcpp.cpp  elfcpp_file.cpp  elfcpp_internal.cpp  elfcpp_swap.cpp  i386.cpp  mips.cpp  powerpc.cpp  s390.cpp  sparc.cpp  tilegx.cpp  x86_64.cpp
libs/gold/include/gold/gold/: Exit_status.h  do_gold_unreachable.h  gold_assert.h  gold_exit.h  gold_unreachable.h  token.h
libs/gold/src/: CMakeLists.txt  Exit_status.cpp  do_gold_unreachable.cpp  gold_assert.cpp  gold_exit.cpp  gold_unreachable.cpp  system.cpp  token.cpp
